- Changed minor appearance. clor on result showing - Aligned pre-test page to have same format with adaptive quiz page - Fixed possible bug where new user might cause error when fetching report - Fixed possible bug where no limit time might cause total time taken to always be zeroed.

--- a/app/static/header_template.css
+++ b/app/static/header_template.css
@@ -20,3 +20,83 @@ svg
     height:20px;
     padding-right:5px;
 }
+
+.btn-circle {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.428571429;
+    border-radius: 25px;
+}
+
+.btn-circle.btn-lg {
+width: 50px;
+height: 50px;
+padding: 10px 16px;
+font-size: 18px;
+line-height: 1.33;
+border-radius: 25px;
+}
+
+.btn-circle.btn-xl {
+width: 70px;
+height: 70px;
+padding: 10px 16px;
+font-size: 24px;
+line-height: 1.33;
+border-radius: 35px;
+}
+
+.btn-dangercustom {
+--bs-btn-color: #fff;
+--bs-btn-bg: #D92D20;
+--bs-btn-border-color: #D92D20;
+--bs-btn-hover-color: #fff;
+--bs-btn-hover-bg: #bb2d3b;
+--bs-btn-hover-border-color: #b02a37;
+--bs-btn-focus-shadow-rgb: 225, 83, 97;
+--bs-btn-active-color: #fff;
+--bs-btn-active-bg: #b02a37;
+--bs-btn-active-border-color: #a52834;
+--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+--bs-btn-disabled-color: #fff;
+--bs-btn-disabled-bg: #D92D20;
+--bs-btn-disabled-border-color: #D92D20;
+}
+
+
+.btn-successcustom {
+--bs-btn-color: #fff;
+--bs-btn-bg: #17B26A;
+--bs-btn-border-color: #17B26A;
+--bs-btn-hover-color: #fff;
+--bs-btn-hover-bg: #157347;
+--bs-btn-hover-border-color: #146c43;
+--bs-btn-focus-shadow-rgb: 60, 153, 110;
+--bs-btn-active-color: #fff;
+--bs-btn-active-bg: #146c43;
+--bs-btn-active-border-color: #13653f;
+--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+--bs-btn-disabled-color: #fff;
+--bs-btn-disabled-bg: #17B26A;
+--bs-btn-disabled-border-color: #17B26A;
+}
+
+.btn-bluecustom {
+--bs-btn-color: #fff;
+--bs-btn-bg: #0056B3;
+--bs-btn-border-color: #0056B3;
+--bs-btn-hover-color: #fff;
+--bs-btn-hover-bg: #004099;
+--bs-btn-hover-border-color: #004099;
+--bs-btn-focus-shadow-rgb: 0, 86, 179;
+--bs-btn-active-color: #fff;
+--bs-btn-active-bg: #003366;
+--bs-btn-active-border-color: #003366;
+--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+--bs-btn-disabled-color: #fff;
+--bs-btn-disabled-bg: #0056B3;
+--bs-btn-disabled-border-color: #0056B3;
+}
